[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt_gateway"
version = "0.0.12"
authors = [
  { name="Bill Kish", email="bk@jiggy.ai" },
]
dependencies=['loguru', 'pedantic[email]', 'requests']
description = "Client for GPT-Gateway.com including ChatGPT Retreiver Plugins"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/jiggy-ai/gpt-gateway-client"
"Bug Tracker" = "https://github.com/jiggy-ai/gpt-gateway-client/issues"