[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jiggybase"
version = "0.0.20"
authors = [
  { name="Bill Kish", email="bk@jiggy.ai" },
]
dependencies=['loguru', 'pedantic[email]', 'requests']
description = "Client for Jiggy AI JiggyBase, including ChatGPT Retriever Plugins"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage"    = "https://github.com/jiggy-ai/jiggybase"
"Bug Tracker" = "https://github.com/jiggy-ai/issues"